--- a/Project Masai/bags.html
+++ b/Project Masai/bags.html
@@ -235,7 +235,7 @@
       <div id="insideContainer">
         <div id="sort">
           <select id="filter" required>
-            <option value="">Select Item</option>
+            <option value="">Sort Item</option>
             <option value="Hat">Hat</option>
             <option value="Belt">Belt</option>
             <option value="Jewelry">Jewelry</option>
