--- a/Project Masai/kids.html
+++ b/Project Masai/kids.html
@@ -235,7 +235,7 @@
       <div id="insideContainer">
         <div id="sort">
           <select id="filter">
-            <option value="">Select Item</option>
+            <option value="">Sort Item</option>
             <option value="Girl Dress">Girls</option>
             <option value="Boy Dress">Boys</option>
             <option value="Jacket">Jackets</option>
