--- a/Project Masai/men.html
+++ b/Project Masai/men.html
@@ -238,7 +238,7 @@
       <div id="insideContainer">
         <div id="sort">
           <select id="filter" required>
-            <option value="">Select Item</option>
+            <option value="">Sort Item</option>
             <option value="T-shirt">Shirts</option>
             <option value="Pant">Pants</option>
             <option value="Jacket">Jacket</option>
