--- a/Project Masai/women.html
+++ b/Project Masai/women.html
@@ -238,7 +238,7 @@
       <div id="insideContainer">
         <div id="sort">
           <select id="filter">
-            <option value="">Select Item</option>
+            <option value="">Sort Item</option>
             <option value="Jacket">Shirts-</option>
             <option value="Pant">Pants</option>
             <option value="Maxi Dress">Maxi Dress</option>
