--- a/Nordstrom Rack Clone/cart.html
+++ b/Nordstrom Rack Clone/cart.html
@@ -153,7 +153,7 @@
                 <li><h3>Need Help ?</h3></li>
                 <li>
                   <a
-                    href="#"
+                    href="https://www.nordstromrack.com/faq#anchor-link-customer-care"
                     ><svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="16"
@@ -249,21 +249,21 @@
                 <ul class="nav flex-column">
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/my-account/order-lookup"
                       class="nav-link p-0 text-muted"
                       >Order Status</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/my-account/blank-return"
                       class="nav-link p-0 text-muted"
                       >Guest Returns</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/ship-return-policy"
                       class="nav-link p-0 text-muted"
                       >Shipping & Return Policy</a
                     >
@@ -276,21 +276,21 @@
                 <ul class="nav flex-column">
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/about"
                       class="nav-link p-0 text-muted"
                       >About Our Brand</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/nordyclub"
                       class="nav-link p-0 text-muted"
                       >The Nordy Club</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://stores.nordstromrack.com/search?_ics=1721304797075&irclickid=~070PWSX10XRHIHNGFGMSJABukgmngedkholgh9~32SQPMGwof96X"
                       class="nav-link p-0 text-muted"
                       >Store Locator</a
                     >
@@ -303,14 +303,14 @@
                 <ul class="nav flex-column">
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/promo/nordstrom-cares"
                       class="nav-link p-0 text-muted"
                       >Corporate Social Responsibility</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/bbbs"
                       class="nav-link p-0 text-muted"
                       >Big Brothers, Big Sisters</a
                     >
@@ -323,21 +323,21 @@
                 <ul class="nav flex-column">
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/becomecardmember?cc=RA1001"
                       class="nav-link p-0 text-muted"
                       >Apply for a Nordstrom Card</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromcard.com/login"
                       class="nav-link p-0 text-muted"
                       >Pay My Bill</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromcard.com/login"
                       class="nav-link p-0 text-muted"
                       >Manage my Nordstrom Card</a
                     >
@@ -350,14 +350,14 @@
                 <ul class="nav flex-column">
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstrom.com/?_ics=1721304797075&irclickid=~070PWSX10XRHIHNGFGMSJABukgmngedkholgh9~32SQPMGwof96X"
                       class="nav-link p-0 text-muted"
                       >Nordstrom</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/promo/hautelook"
                       class="nav-link p-0 text-muted"
                       >HauteLook</a
                     >
@@ -371,14 +371,14 @@
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://press.nordstrom.com/investor-relations?_ics=1721304797075&irclickid=~070PWSX10XRHIHNGFGMSJABukgmngedkholgh9~32SQPMGwof96X"
                       class="nav-link p-0 text-muted"
                       >Press Releases</a
                     >
                   </li>
                   <li class="nav-item mb-2">
                     <a
-                      href="#"
+                      href="https://www.nordstromrack.com/promo/nordstrom-media-network?origin=footer"
                       class="nav-link p-0 text-muted"
                       >Nordstrom Media Network</a
                     >
